--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -34,7 +34,7 @@ Resources:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
       Version: "12.2"
       Component: "vault"
-      OS: !If [WinVersionIs16, 'Win2016', 'Win2019']
+      OS: !Ref WinVersion
     DependsOn:
       - LambdaDeployRole
       - GetLatestAMILambda
@@ -579,9 +579,9 @@ Parameters:
     Type: String
     Description: Select a Windows Server version for all Windows-based components.
     AllowedValues:
-      - Windows Server 2016
-      - Windows Server 2019
-    Default: Windows Server 2016
+      - Win2016
+      - Win2019
+    Default: Win2016
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Select an existing Key Pair from your AWS account.
@@ -773,9 +773,6 @@ Conditions:
   SecretEmpty: !Equals
     - ''
     - !Ref Secret
-  WinVersionIs16: !Equals
-    - 'Windows Server 2016'
-    - !Ref "WinVersion"
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
