--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -118,9 +118,9 @@ Resources:
     Type: Custom::FindAMI
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "12.2"
+      Version: !Ref ReleaseVersion
       Component: "vault"
-      OS: !If [WinVersionIs16, 'Win2016', 'Win2019']
+      OS: !Ref WinVersion
     DependsOn:
       - LambdaDeployRole
       - GetLatestAMILambda
@@ -128,9 +128,9 @@ Resources:
     Type: Custom::FindAMI
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "12.2"
+      Version: !Ref ReleaseVersion
       Component: "pvwa"
-      OS: !If [WinVersionIs16, 'Win2016', 'Win2019']
+      OS: !Ref WinVersion
     DependsOn:
       - LambdaDeployRole
       - GetLatestAMILambda
@@ -138,7 +138,7 @@ Resources:
     Type: Custom::FindAMI
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "12.2"
+      Version: !Ref ReleaseVersion
       Component: "cpm"
       OS: !Ref WinVersion
     DependsOn:
@@ -148,9 +148,9 @@ Resources:
     Type: Custom::FindAMI
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "12.2"
+      Version: !Ref ReleaseVersion
       Component: "psm"
-      OS: !If [WinVersionIs16, 'Win2016', 'Win2019']
+      OS: !Ref WinVersion
     DependsOn:
       - LambdaDeployRole
       - GetLatestAMILambda
@@ -158,7 +158,7 @@ Resources:
     Type: Custom::FindAMI
     Properties:
       ServiceToken: !GetAtt GetLatestAMILambda.Arn
-      Version: "12.2"
+      Version: !Ref ReleaseVersion
       Component: "psmp"
       OS: "Amazon-Linux-2"
     DependsOn:
@@ -597,7 +597,7 @@ Resources:
         - !Ref VaultDRInstancesRole
     DeletionPolicy: Retain
   ComponentInstanceProfile:
-    Type: 'A'WS::IAM::InstanceProfile'
+    Type: 'AWS::IAM::InstanceProfile'
     Properties:
       Roles:
         - !Ref ComponentInstanceRole
@@ -760,14 +760,30 @@ Resources:
 
           def handler(event, context):
             try:
-              response = boto3.client('ec2').describe_images(
-                  Owners=['***REMOVED***', '***REMOVED***', '***REMOVED***', '***REMOVED***'],
-                  Filters=[
-                    {'Name': 'tag:Cyberark_version', 'Values': [event['ResourceProperties']['Version']]},
-                    {'Name': 'tag:component', 'Values': [event['ResourceProperties']['Component']]},
-                    {'Name': 'tag:os', 'Values': [event['ResourceProperties']['OS']]},
-                  ],
-              )
+              ver= event['ResourceProperties']['Version']
+              major= int(ver.split(".")[0])
+              minor= int(ver.split(".")[1])
+              response = {
+                  "Images": []
+              }
+
+              # In release versions previous to 12.2, "os" filter didn't exist
+              os_filter = {} if ver in ['11.5','11.6','11.7','12.0','12.1'] else \
+              {'Name': 'tag:os', 'Values': [event['ResourceProperties']['OS']]}
+
+              while (response['Images'] == []) and (major >= 0):
+                while (response['Images'] == []) and (minor >= 0):
+                  response = boto3.client('ec2').describe_images(
+                      Owners=['***REMOVED***', '***REMOVED***', '***REMOVED***', '***REMOVED***'],
+                      Filters=[
+                        {'Name': 'tag:Cyberark_version', 'Values':  [str(major)+'.'+str(minor)]},
+                        {'Name': 'tag:component', 'Values': [event['ResourceProperties']['Component']]},
+                        os_filter,
+                      ],
+                  )
+                  minor -= 1
+                major -= 1
+                minor = 9
               amis = sorted(response['Images'],
                             key=lambda x: x['CreationDate'],
                             reverse=True)
@@ -776,7 +792,7 @@ Resources:
               cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, id)
             except:
               traceback.print_last()
-              cfnresponse.send(event, context, cfnresponse.FAIL, {}, "ok")
+              cfnresponse.send(event, context, cfnresponse.FAIL, {}, "ami not found")
       Runtime: python3.6
       Handler: index.handler
       Timeout: 60
@@ -1499,14 +1515,15 @@ Rules:
         AssertDescription: You must accept EULA to continue.
   VersionSupport:
     Assertions:
-      - Assert: !And
+      - Assert: !Or
         - !Equals
           - !Ref WinVersion
-          - Win2019
-        - !Contains
-          - ['11.5','11.6','11.7','12.0','12.1']
-          - !Ref ReleaseVersion
-        AssertDescription: The release version is not supported with the selected Windows Version.
+          - Win2016
+        - !Not
+          - 'Fn::Contains':
+            - ['11.5','11.6','11.7','12.0','12.1']
+            - !Ref ReleaseVersion
+        AssertDescription: The selected versions are not supported together.
 Metadata:
   'AWS::CloudFormation::Interface':
     ParameterGroups:
@@ -1514,11 +1531,12 @@ Metadata:
           default: General parameters
         Parameters:
           - EULA
+          - ReleaseVersion
+          - WinVersion
           - KeyName
           - VaultFilesBucket
           - LicenseFile
           - RecoveryPublicKey
-          - WinVersion
       - Label:
           default: Primary Vault and DR Vault configuration
         Parameters:
@@ -1567,6 +1585,8 @@ Metadata:
     ParameterLabels:
       EULA:
         default: License Agreement
+      ReleaseVersion:
+        default: CyberArk Release Version
       WinVersion:
         default: Windows Server Version
       KeyName:
